--- a/build.gradle
+++ b/build.gradle
@@ -4,10 +4,10 @@ buildscript {
     repositories {
         google()
         jcenter()
-        
+        mavenLocal()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.4.1'
+        classpath 'com.android.tools.build:gradle:3.4.2'
         
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -18,7 +18,7 @@ allprojects {
     repositories {
         google()
         jcenter()
-        
+        mavenLocal()
     }
 }
 
