--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,7 +28,17 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'com.google.android.material:material:1.0.0'
 
+    // Firebase
+    implementation 'com.google.firebase:firebase-database:18.0.1'
+    implementation 'com.google.firebase:firebase-auth:18.1.0'
+    implementation 'com.google.firebase:firebase-storage:18.1.1'
+    implementation 'com.google.firebase:firebase-core:17.0.1'
+
+    // Firebase UI
+    implementation 'com.firebaseui:firebase-ui-auth:4.3.1'
+
     implementation 'de.hdodenhof:circleimageview:3.0.0'
     implementation 'com.github.bumptech.glide:glide:4.8.0'
 
 }
+apply plugin: 'com.google.gms.google-services'
