--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:18.1.0'
     implementation 'com.google.firebase:firebase-storage:18.1.1'
     implementation 'com.google.firebase:firebase-core:17.0.1'
+    implementation 'com.firebaseui:firebase-ui-database:3.1.3'
 
     // Firebase UI
     implementation 'com.firebaseui:firebase-ui-auth:4.3.1'
